# nasiya-aggregator

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2060f63320c5_add_url_check_log_table.py  645a1523d207_add_feedback_table.py  d7e21add232f_init_providers_products_users_events_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  bot.py  feedback.py  health.py  products.py  providers.py  stats.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit.py  event.py  feedback.py  product.py  provider.py  url_check.py  user.py
backend/app/scheduler/: __init__.py  notify.py  url_checker.py
backend/app/schemas/: event.py  feedback.py  product.py  provider.py  user.py
backend/app/scripts/: seed_admin.py  seed_providers.py
backend/app/services/: stats.py
bot/: .dockerignore  Dockerfile  pyproject.toml
bot/app/: config.py  main.py
bot/app/handlers/: __init__.py  common.py  feedback.py  lang.py  start.py
bot/app/i18n/: __init__.py
bot/app/keyboards/: main.py
bot/app/middlewares/: i18n.py
bot/app/services/: api_client.py  commands.py  events.py  redis_client.py  user_state.py
dashboard/: .dockerignore  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
deploy/: README.md
(+51 files in other folders)
