[project]
name = "nasiya-bot"
version = "0.1.0"
description = "Telegram bot for Nasiya Aggregator (aiogram 3)"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.2",
    "redis>=5.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
